automatic project update for v9.3.0