@@ -12,8 +12,8 @@ public class SpringDocConfiguration {
     public ServerBaseUrlCustomizer serverBaseUrlRequestCustomizer() {
         return (serverBaseUrl, request) -> {
             List<String> forwardedPrefix = request.getHeaders().get("X-Forwarded-Prefix");
-            if (forwardedPrefix != null && forwardedPrefix.size() > 0) {
-                return forwardedPrefix.get(0);
+            if (forwardedPrefix != null && !forwardedPrefix.isEmpty()) {
+                return forwardedPrefix.getFirst();
             }
             return serverBaseUrl;
         };
